tests/ui/entry-point/imported_main_const_forbidden.rs
pub mod foo {
    pub const BAR: usize = 42;
}

use foo::BAR as main; //~ ERROR `main` function not found in crate
